cluster-resources/core-services/gateway/nginx-gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: gateway
spec:
  gatewayClassName: nginx
  listeners:
  - name: https
    hostname: "*.seely.dev"
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - name: nginx-gateway-cert
    allowedRoutes:
      namespaces:
        from: All
  - name: homelab-https
    hostname: "*.homelab.seely.dev"
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - name: nginx-gateway-cert
    allowedRoutes:
      namespaces:
        from: All
